update to use godot4_4

--- a/pkgs/by-name/op/opengamepadui/local.nix.example
+++ b/pkgs/by-name/op/opengamepadui/local.nix.example
@@ -3,10 +3,8 @@
   autoPatchelfHook,
   cargo,
   dbus,
-  fetchFromGitHub,
   gamescope,
-  godot_4,
-  godot_4-export-templates,
+  godot_4_4,
   hwdata,
   lib,
   libGL,
@@ -25,7 +23,7 @@
 
 stdenv.mkDerivation (finalAttrs: {
   pname = "opengamepadui";
-  version = "0.35.8";
+  version = "0.37.0";
 
   buildType = if withDebug then "debug" else "release";
 
@@ -42,8 +40,8 @@ stdenv.mkDerivation (finalAttrs: {
   nativeBuildInputs = [
     autoPatchelfHook
     cargo
-    godot_4
-    godot_4-export-templates
+    godot_4_4
+    godot_4_4.export-templates-bin
     pkg-config
     rustPlatform.cargoSetupHook
   ];
@@ -72,13 +70,13 @@ stdenv.mkDerivation (finalAttrs: {
 
   env =
     let
-      versionAndRelease = lib.splitString "-" godot_4.version;
+      versionAndRelease = lib.splitString "-" godot_4_4.version;
     in
     {
-      GODOT = lib.getExe godot_4;
+      GODOT = lib.getExe godot_4_4;
       GODOT_VERSION = lib.elemAt versionAndRelease 0;
       GODOT_RELEASE = lib.elemAt versionAndRelease 1;
-      EXPORT_TEMPLATE = "${godot_4-export-templates}";
+      EXPORT_TEMPLATE = "${godot_4_4.export-templates-bin}";
       BUILD_TYPE = "${finalAttrs.buildType}";
     };
 
@@ -90,7 +88,7 @@ stdenv.mkDerivation (finalAttrs: {
     # Godot looks for export templates in HOME
     export HOME=$(mktemp -d)
     mkdir -p $HOME/.local/share/godot/export_templates
-    ln -s "${godot_4-export-templates}" "$HOME/.local/share/godot/export_templates/$GODOT_VERSION.$GODOT_RELEASE"
+    ln -s "${godot_4_4.export-templates-bin}" "$HOME/.local/share/godot/export_templates/$GODOT_VERSION.$GODOT_RELEASE"
   '';
 
   postInstall = ''
