--- a/pkgs/by-name/op/opengamepadui/local.nix.example
+++ b/pkgs/by-name/op/opengamepadui/local.nix.example
@@ -89,6 +89,7 @@ stdenv.mkDerivation (finalAttrs: {
     export HOME=$(mktemp -d)
     mkdir -p $HOME/.local/share/godot/export_templates
     ln -s "${godot_4_4.export-templates-bin}" "$HOME/.local/share/godot/export_templates/$GODOT_VERSION.$GODOT_RELEASE"
+    make purge
   '';
 
   postInstall = ''
